# advent-of-code

./: .gitignore  Jenkinsfile  README.md  puzzle.h
01/: part_one.ml  part_two.ml
02/: part_one.ml
2019/: README.md
2019/01/: .env  Dockerfile  README.md  go.mod  main.go
2019/02/: README.md
2019/02/aoc_day_2/: .dockerignore  .gitignore  Dockerfile  README.md  aoc_day_2.nimble  run.sh
2019/02/aoc_day_2/src/: aoc_day_2.nim
2019/03/: 03.js  Dockerfile  README.md  package-lock.json  package.json  wirePathWorker.js
2019/04/: 04.py  Dockerfile  README.md  requirements.txt
2019/05/: .gitignore  Dockerfile  Dockerfile.arm  Dockerfile.solution  LICENSE.txt  README.md  docker-compose-prod.yml  docker-compose.yml  info.rkt  intcode-computer.rkt  intcode-k3s.yaml  intcode-server.rkt  intcode.org  main.rkt
2019/05/scribblings/: 05.scrbl
2019/06/: .dockerignore  .gitignore  Dockerfile  README.md  composer.json  docker-compose.yml  index.php
2019/07/: 07-dev-1.rockspec  07.lua  07.run.lua  07.test.lua  07p1.run.lua  07p2.run.lua  README.md  amp.lua  dotenv.lua  intcode-service.lua
2019/08/: README.md
2019/08/aoc-day8-solution/: .gitignore  ChangeLog.md  Dockerfile  README.md  package.yaml
2019/08/aoc-day8-solution/app/: Main.hs
2019/08/aoc-day8-solution/src/: Lib.hs
2019/09/: README.md  solution.zsh
2019/10/: README.md
2019/10/aoc_2019_day_10/: Cargo.toml
2019/10/aoc_2019_day_10/src/: main.rs
2019/11/: .gitignore  README.md
2019/11/aoc_2019_day_11/: CHANGELOG.md  README.md  project.clj
2019/11/aoc_2019_day_11/doc/: intro.md
2019/11/aoc_2019_day_11/src/aoc_2019_day_11/: core.clj  input_fetcher.clj  intcode_service.clj  robot.clj
2019/11/aoc_2019_day_11/test/aoc_2019_day_11/: core_test.clj  input_fetcher_test.clj  robot_test.clj
2019/12/AdventOfCodeDay12/: Package.resolved  Package.swift  README.md
2019/12/AdventOfCodeDay12/Sources/AdventOfCodeDay12/: main.swift
2019/12/aoc-2019-day-12/: Package.swift  README.md
2019/12/aoc-2019-day-12/Sources/aoc-2019-day-12/: main.swift
2019/12/aoc-2019-day-12/Tests/: LinuxMain.swift
2019/12/aoc-2019-day-12/Tests/aoc-2019-day-12Tests/: XCTestManifests.swift  aoc_2019_day_12Tests.swift
2019/13/: README.md
2019/13/advent-of-code-day-13/: Dockerfile  Gemfile  docker-compose.yml  main.rb
2019/13/advent-of-code-day-13/lib/: aoc_client.rb  intcode_client.rb
2020/: Cargo.toml
2020/01/aoc_2020_day_01/: Cargo.toml
2020/01/aoc_2020_day_01/src/: aoc_2020_day_01.rs  main.rs
2020/02/aoc_2020_day_02/: Cargo.toml
2020/02/aoc_2020_day_02/src/: aoc_2020_day_02.rs  main.rs
2020/03/aoc_2020_day_03/: Cargo.toml
2020/03/aoc_2020_day_03/src/: aoc_2020_day_03.rs  main.rs
2020/src/: common.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  lib.rs  main.rs
2021/: .dockerignore  .gitignore  Dockerfile  README.md  aoc.lua  aoc2021-scm-0.rockspec  lib.lua  run.lua  test.lua
2021/01/: .busted  01.lua  01.run.lua  01.test.lua  Dockerfile  README.md  aoc2021-dev-01.rockspec  dotenv.lua  run.lua  set_paths.lua  solution.lua  test.lua
2021/02/: run.lua  solution.lua  test.lua
2021/03/: run.lua  solution.lua  test.lua
2021/04/: run.moon  solution.moon  test.lua  test.moon
2022/: .gitignore  Cargo.toml
2022/src/: common.rs  day_01.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs  main.rs
2022/src/day_02/: .gitignore  README.md  mod.rs
2022/src/day_02/prolog/: rules.pl  server.pl  test_v1.json  test_v2.json
2023/: .ccls  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  vcpkg.json
2023/lib/: CMakeLists.txt
2023/lib/aoc/: CMakeLists.txt  get_input.h
2023/lib/libaoc/: CMakeLists.txt  get_input.cpp
2023/src/: CMakeLists.txt  day1.cpp  day1.h  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  main.cpp  puzzle.h  puzzle_registry.h  puzzles.h
2023/tests/: CMakeLists.txt  test.cpp  testday1.cpp
2024/: .gitignore  README.md  build.zig  build.zig.zon  makefile
2024/src/: aoc.zig  main.zig
2024/src/01/: makefile  solve.zig
2024/src/02/: .gitignore  makefile  solve.cpp
2024/src/03/: Cargo.toml  makefile
2024/src/03/src/: lib.rs
2024/src/04/: makefile  solve.nim  solve.swift
2025/: .bazelrc  .dir-locals.el  .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
2025/include/: aoc.hpp
2025/include/solutions/: day01.hpp
2025/patches/: cpp-httplib.patch
2025/src/: aoc.cpp  main.cpp
2025/src/solutions/: day01.cpp
2025/tests/: test_main.cpp
2025/tests/solutions/: day01_test.cpp
2025/tools/: aoc-init.sh  coverage-env.sh  coverage.sh  dispatcher.bzl  llvm-cov  llvm-profdata
