[package]
name = "aoc_2022"
version = "0.1.0"
authors = ["Khayyam Saleem <hello@khayyam.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
mockito = "0.31.0"
reqwest = { version =  "0.11.13" , features = ["json"] }
dotenv = "0.15.0"
itertools = "0.10.5"
recap = "0.1.2"
serde = "1.0.148"
plotlib = "0.5.1"
