load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//:tools/dispatcher.bzl", "generate_dispatcher")

exports_files([".env"])

sh_binary(
    name = "aoc-init",
    srcs = ["tools/aoc-init.sh"],
    visibility = ["//visibility:public"],
)

generate_dispatcher(
    name = "gen_dispatcher_cpp",
    srcs = glob(["include/solutions/*.hpp"], allow_empty = True),
    out_name = "dispatcher.cpp",
)

cc_library(
  name = "aoc",
    srcs = ["src/aoc.cpp"] + glob(["src/solutions/*.cpp"], allow_empty = True),
  hdrs = ["include/aoc.hpp"] + glob(["include/solutions/*.hpp"], allow_empty = True),
  includes = ["include"],
  visibility = ["//visibility:public"],
  deps = [
    "@cpp-httplib//:cpp-httplib",
    "@dotenv_cpp//:dotenv"
  ],
  copts = [
    "-std=c++23",
  ],
  tags = ["coverage"],
)

cc_binary(
  name = "aoc2025",
  srcs = ["src/main.cpp"] + [":gen_dispatcher_cpp"],
  deps = [
    ":aoc",
  ],
  data = [ "//:.env" ],
)

cc_test(
  name = "aoc_tests",
  srcs = glob(["tests/**/*_test.cpp"]),
  deps = [
    ":aoc",
    "@catch2//:catch2_main",
  ],
  size = "small",
  env = {
    # Suppress Catch2 shard warnings when not using Bazel sharding
    "TEST_SHARD_INDEX": "0",
    "TEST_TOTAL_SHARDS": "1",
    "TEST_SHARD_STATUS_FILE": "/dev/null",
  },
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//:aoc2025": "--features=-parse_headers",
        "//:aoc_tests": "--features=-parse_headers",
    },
)
