bazel_dep(name = "catch2", version = "3.11.0")
bazel_dep(name = "cpp-httplib", version = "0.22.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor.git",
    commit = "02d15621b528efd877f5d5657c4b738523a0eb17",
)
