bazel_dep(name = "catch2", version = "3.11.0")
bazel_dep(name = "cpp-httplib", version = "0.22.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # Bazel 9 removed native.py_binary and native.cc_binary; this fork adds the required loads.
    # Tracking: https://github.com/hedronvision/bazel-compile-commands-extractor/pull/272
    remote = "https://github.com/tinted-software/bazel-compile-commands-extractor.git",
    commit = "61f2d8f97cfcdcbf2f4ad504c1a093fbbe92ece2",
)

# Bazel 9 removed cc_library as a native rule, but the cpp-httplib BCR overlay
# BUILD file still uses it without a load(). This patch adds the missing load().
single_version_override(
    module_name = "cpp-httplib",
    patches = ["//patches:cpp-httplib.patch"],
    patch_strip = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "dotenv_cpp",
    # Fetches the master branch. For production, replace with a specific commit hash/URL.
    url = "https://github.com/laserpants/dotenv-cpp/archive/refs/heads/master.tar.gz",
    strip_prefix = "dotenv-cpp-master",
    # Inject a BUILD file since the repo doesn't have one
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "dotenv",
    hdrs = glob(["include/laserpants/dotenv/*.h"]),
    includes = ["include/laserpants/dotenv"],
    visibility = ["//visibility:public"],
)
""",
)
